--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.7.2",
+    "@tanstack/react-query-devtools": "^5.7.2",
+    "axios": "^1.6.0",
+    "formik": "^2.4.5",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-image-gallery": "^1.3.0",
+    "react-toastify": "^9.1.3",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^3.0.0-beta.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
